src/test/ui/parser/doc-before-identifier.stderr
error: expected identifier, found doc comment `/// document`
  --> $DIR/doc-before-identifier.rs:3:4
   |
LL | fn /// document
   |    ^^^^^^^^^^^^ expected identifier, found doc comment

error: aborting due to previous error

